# prompt2Blend

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  __init__.py  blender_llm_addin.py  build.sh  build_addon.py  embeddings_manager.py  prompts.py  pyproject.toml  rag_agent.py  requirements-dev.txt  requirements.txt  semantic_chunker.py  setup.cfg  setup.py
chroma_db/: chroma.sqlite3
chroma_db/d7240503-cf3b-4704-a0c1-9a53e1ff766b/: index_metadata.pickle
src/: __init__.py  blender_llm_addin.py  embeddings_manager.py  rag_agent.py
tests/: test_addon.py  test_rag_agent.py
