[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt2blend"
version = "0.1.0"
description = "Blender add-on for AI-assisted 3D modeling using LLMs"
readme = "README.md"
authors = [
    {name = "Anthony Chapman", email = "adchap77@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: 3D :: Modeling",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "chromadb>=0.4.24",
    "openai>=1.0.0",
    "ollama>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/Technologic101/prompt2blend"
Repository = "https://github.com/Technologic101/prompt2blend"
Bug-Tracker = "https://github.com/Technologic101/prompt2blend/issues"
Documentation = "https://github.com/Technologic101/prompt2blend#readme"

[project.scripts]
prompt2blend-build = "build_addon:main"

[tool.setuptools]
include-package-data = true
py-modules = ["build_addon"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*", "dist*", "build*"]
