[metadata]
name = prompt2blend
version = 1.1.0
author = Anthony Chapman
author_email = adchap77@gmail.com
description = Blender add-on for AI-assisted 3D modeling using LLMs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Technologic101/prompt2blend
project_urls =
    Bug Tracker = https://github.com/Technologic101/prompt2blend/issues
    Documentation = https://github.com/Technologic101/prompt2blend#readme
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Graphics :: 3D :: Modeling

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy>=1.24.0,<2.0.0
    requests>=2.31.0
    scikit-learn>=1.3.0
    chromadb>=0.4.24
    openai>=1.0.0
    ollama>=0.1.5

[options.packages.find]
where = .
exclude = 
    tests
    tests.*

[options.entry_points]
blender = 
    prompt2blend = prompt2blend:bl_info
